fix spacing and some more

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 .logo {
 	background: url('image/logo.svg') no-repeat center center;
-	background-size: contain;
+	/* background-size: contain; */
+	background-size: 100%;
 	/* width: 463px; */
 	/* width: 100%; */
 	/* height: 100%; */
@@ -41,7 +42,8 @@
 }
 nav .login-btn span{
 	margin-top: auto;
-	margin-bottom: 20px;
+	/* margin-bottom: 20px; */
+	margin-bottom: 24px;
 }
 nav .menu-btn {
 	background: #fff;
@@ -56,7 +58,7 @@ nav .menu-btn-wrapper {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 100px;
+	width: 90px;
 	height: 100%;
 }
 nav .menu-icon {
@@ -81,6 +83,7 @@ nav .menu-text{
 	height: 630px; */
 	width: 100%;
 	height: 100%;
+	padding-right: 30px;
 }
 .main-img-wrapper  img {
 	width: 100%;
@@ -131,7 +134,7 @@ nav .menu-text{
 .cdf{
 	color: #6A6A80;
 	text-align: center;
-	font-size: 12px;
+	font-size: 11px;
 	display: block;
 }
 .cde {
@@ -145,7 +148,7 @@ nav .menu-text{
 	padding-top: 27px;
 }
 .main-box-wrapper {
-	margin: 45px 35px;
+	margin: 45px 105px 45px 10px;
 	box-shadow: 7px 7px 10px 0px rgba(0,0,0,0.18);
 }
 .mini-nav {
@@ -313,7 +316,7 @@ nav .menu-text{
 	margin-bottom: 20px;
 }
 .contact-form .name, .contact-form .detail {
-	border: 1px solid #1A1919;
+	border: 2px solid #A9AAA9;
 	box-shadow: inset 3px 3px 10px 0px rgba(0,0,0,0.18);
 	width: 100%;
 	display: block;
@@ -324,7 +327,7 @@ nav .menu-text{
 	width: 100%;
 	height: 100%;
 	background: #fff;
-	padding: 30px 40px;
+	padding: 30px 34px;
 }
 .press-wrapper a, .form-wrapper a{
 	color: #1D73AC;
@@ -387,6 +390,12 @@ nav .menu-text{
 }
 @media (min-width: 1280px) {
   .container {
-    width: 1200px;
+    width: 1250px;
+  }
+  .kol {
+  	width: 826px
+  }
+  .cfs {
+  	width: 1320px;
   }
 }
